# LibTDJni

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  install.sh  patches.sh  release.sh  rerelease.sh  td_jni.cpp  update.sh
.github/workflows/: td.yml
patches/: allow_read_user.patch
scripts/: linux.sh  win32.sh  win64.sh
